fix: :bug: fix glyph tooltip overflow
fixed TokenPairHistoricalChart glyph overflow on mobile.

--- a/packages/web/styles/globals.css
+++ b/packages/web/styles/globals.css
@@ -318,6 +318,11 @@
   box-shadow: none !important;
 }
 
+.visx-tooltip-glyph > svg {
+  width: 8px;
+  height: 8px;
+}
+
 .breakspaces {
   white-space-collapse: break-spaces;
 }
